kube/monitoring/ingress-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.dev.d00t.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              name: http
  tls:
  - hosts:
    - grafana.dev.d00t.me
    secretName: grafana-cert-prod
