kube/monitoring/ingress-prometheus-k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: prometheus-k8s
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.dev.d00t.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-k8s
            port:
              name: web
  tls:
  - hosts:
    - prometheus.dev.d00t.me
    secretName: prometheus-cert-prod
